sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:13: error: illegal start of simple expression
        if(!casC(t,))
                   ^GatesPancake:14: error: ')' expected but '}' found.
      }
      ^GatesPancake:75: error: '(' expected but identifier found.
  if estLibre(0){
     ^